samples/_failures_safe/1761607275_ca3c5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4de354a.c: In function ‘main’:
./samples/SAFE/__tmp_a4de354a.c:183:5: error: expected identifier or ‘(’ at end of input
  183 |     int
      |     ^~~
./samples/SAFE/__tmp_a4de354a.c:183:5: error: expected declaration or statement at end of input
